photos and footer
font update

--- a/2_market.html
+++ b/2_market.html
@@ -48,7 +48,7 @@
     img {border: 1px solid #edeae6;}
 
     .hero-image {
-      background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("sharingpresents.jpg");
+      background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("photos_pages/mkt/sharingpresents.jpg");
       height: 70%;
       background-position: center;
       background-repeat: no-repeat;
@@ -70,10 +70,12 @@
 
     <div class="hero-image">
       <div class="hero-text">
-        <h1 style="font-family: Arial, Helvetica, sans-serif; font-size:50px"><strong>HOLIDAY MARKET &amp; IDEAS HOUSE</strong></h1>
+        <h1 style="font-size:50px"><strong>HOLIDAY MARKET &amp; IDEAS HOUSE</strong></h1>
       </div>
     </div>
   <br>
+
+
 <h1>'Tis the season ...
   <br>to shop, give, and be inspired.</h1>
 <div class="w3-container">
@@ -199,25 +201,21 @@
   <div>
 
 <br>
-<br>
-<br>
-  <div class="footer">
-    <h3 style="font-family: Georgia, serif;">
-  HAUTE HOUSE STUDIO</h3>
+
+  <footer>
+    <h3>HAUTE HOUSE STUDIO</h3>
     <div class="row">
-      <div class="column" style="font-family: Georgia, serif;">
+      <div class="column">
           <a href="mailto:hello@hautehousestudio.com" style="color:white;"> hello@hautehousestudio.com</a>
           <br>(612) 730-1143
           <br> Hours by appointment
-          <br>
       </div>
-      <div class="column" style="font-family: Georgia, serif;">
+      <div class="column">
           5500 Lincoln Drive
           <br>Suite 150
           <br>Edina, MN 55436
-          <br>
       </div>
-  </div></div>
+  </div></footer>
 
   <script>
   function myFunction() {
