--- a/3_events.html
+++ b/3_events.html
@@ -9,6 +9,7 @@
 
     gtag('config', 'UA-150372308-1');
   </script>
+
   <title>EVENTS - HAUTE HOLIDAY</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -48,7 +49,7 @@
     img {border: 1px solid #edeae6;}
 
     .hero-image {
-      background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("grazetray.jpg");
+      background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("photos_index/events/event.jpg");
       height: 70%;
       background-position: center;
       background-repeat: no-repeat;
@@ -70,7 +71,7 @@
 
     <div class="hero-image">
       <div class="hero-text">
-        <h1 style="font-family: Arial, Helvetica, sans-serif; font-size:50px"><strong>EVENTS</strong></h1>
+        <h1 style="font-size:50px"><strong>EVENTS</strong></h1>
       </div>
     </div>
   <br>
@@ -126,34 +127,33 @@
 
     <div class="row">
       <div class="column">
-        <img src="eventdark.jpg" alt="classy event" style="width:100%">
+        <img src="photos_index/events/longdrinks.jpg" alt="pink drinks" style="width:100%">
       </div>
       <div class="column">
-        <img src="brightparty.jpg" alt="bright party" style="width:100%">
+        <img src="photos_index/events/yay.jpg" alt="yay" style="width:100%">
       </div>
     </div>
 </div>
 
 <br>
-<br>
-<br>
-  <div class="footer">
-    <h3 style="font-family: Georgia, serif;">
+
+  <footer>
+    <h3>
   HAUTE HOUSE STUDIO</h3>
     <div class="row">
-      <div class="column" style="font-family: Georgia, serif;">
+      <div class="column">
           <a href="mailto:hello@hautehousestudio.com" style="color:white;"> hello@hautehousestudio.com</a>
           <br>(612) 730-1143
           <br> Hours by appointment
-          <br>
+
       </div>
-      <div class="column" style="font-family: Georgia, serif;">
+      <div class="column">
           5500 Lincoln Drive
           <br>Suite 150
           <br>Edina, MN 55436
-          <br>
+
       </div>
-  </div></div>
+  </div></footer>
 
   <script>
   function myFunction() {
