--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ HAUTE HOUSE STUDIO</h3>
         <br>Suite 150
         <br>Edina, MN 55436</p>
     </div>
-</div></div></footer>
+</div></footer>
 
 <script>
 function myFunction() {
