--- a/1-1_team.html
+++ b/1-1_team.html
@@ -43,13 +43,13 @@
   h1 {font-family: 'Montserrat', sans-serif; text-align: center;}
   h2 {font-family: 'Montserrat', sans-serif; font-weight: bold; text-align: center;}
   h3 {font-family: 'Montserrat', sans-serif; text-align: center;}
-  h4 {font-family: 'Montserrat', sans-serif;}
+  h4 {font-family: 'Montserrat', sans-serif; text-align: center;}
   p {font-family: 'Lora', serif;}
 
   img {border: 1px solid #edeae6;}
 
   .hero-image {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("colorwreath.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("photos_pages/colorwreath.jpg");
     height: 70%;
     background-position: center;
     background-repeat: no-repeat;
@@ -71,7 +71,7 @@
 
   <div class="hero-image">
     <div class="hero-text">
-      <h1 style="font-family: Arial, Helvetica, sans-serif; font-size:50px"><strong>ABOUT US</strong></h1>
+      <h1 style="font-size:50px"><strong>ABOUT US</strong></h1>
     </div>
   </div>
 <br>
@@ -92,7 +92,7 @@ and memorable way.</h4>
   <div class="column">
     <br>
     <br>
-    <img src="mb.jpg" alt="Marsha and Bridget" style="width:100%">
+    <img src="photos_pages/mb.jpg" alt="Marsha and Bridget" style="width:100%">
   </div>
   <div class="column">
     <h3>Bridget Connell</h3>
@@ -107,23 +107,21 @@ and memorable way.</h4>
 
   <br>
 
-  <div class="footer">
-    <h3 style="font-family: Georgia, serif;">
+  <footer>
+    <h3>
   HAUTE HOUSE STUDIO</h3>
     <div class="row">
-      <div class="column" style="font-family: Georgia, serif;">
+      <div class="column">
           <a href="mailto:hello@hautehousestudio.com" style="color:white;"> hello@hautehousestudio.com</a>
           <br>(612) 730-1143
           <br> Hours by appointment
-          <br>
       </div>
-      <div class="column" style="font-family: Georgia, serif;">
+      <div class="column">
           5500 Lincoln Drive
           <br>Suite 150
           <br>Edina, MN 55436
-          <br>
       </div>
-  </div></div>
+  </div></footer>
 
   <script>
   function myFunction() {
