--- a/5_order.html
+++ b/5_order.html
@@ -48,7 +48,7 @@
     img {border: 1px solid #edeae6;}
 
     .hero-image {
-      background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("freshdecor.png");
+      background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("photos_pages/freshdecor.png");
       height: 70%;
       background-position: center;
       background-repeat: no-repeat;
@@ -70,7 +70,7 @@
 
     <div class="hero-image">
       <div class="hero-text">
-        <h1 style="font-family: Arial, Helvetica, sans-serif; font-size:50px"><strong>HOLIDAY DECOR</strong></h1>
+        <h1 style="size:50px"><strong>HOLIDAY DECOR</strong></h1>
       </div>
     </div>
   <br>
@@ -111,32 +111,30 @@
 
 <div class="row">
   <div class="column">
-    <img src="bigtree.png" alt="upside down christmas tree" style="width:100%">
+    <img src="photos_pages/bigtree.png" alt="upside down christmas tree" style="width:100%">
   </div>
   <div class="column">
-    <img src="colorwreath.jpg" alt="colorful wreath" style="width:100%">
+    <img src="photos_pages/colorwreath.jpg" alt="colorful wreath" style="width:100%">
   </div>
 </div>
 
 
 <br>
-  <div class="footer">
-    <h3 style="font-family: Georgia, serif;">
+  <footer>
+    <h3>
   HAUTE HOUSE STUDIO</h3>
     <div class="row">
-      <div class="column" style="font-family: Georgia, serif;">
+      <div>
           <a href="mailto:hello@hautehousestudio.com" style="color:white;"> hello@hautehousestudio.com</a>
           <br>(612) 730-1143
           <br> Hours by appointment
-          <br>
       </div>
-      <div class="column" style="font-family: Georgia, serif;">
+      <div>
           5500 Lincoln Drive
           <br>Suite 150
           <br>Edina, MN 55436
-          <br>
       </div>
-  </div></div>
+  </div></footer>
 
   <script>
   function myFunction() {
