update abt & events

--- a/3_events.html
+++ b/3_events.html
@@ -117,7 +117,7 @@
             <div class="leftcolumn">
                 <p>Haute House Studio is introducing new studio workshops and private events
                   that teach the art of floral design and celebrate creativity in our spacious and bright creative space.
-                  Contact us to organize your private event. We've done can teach you everything about holiday centerpieces,
+                  Contact us to organize your private event. We've can teach you everything about holiday centerpieces,
                   entertaining how-tos, and we're even hosting our FIRST-EVER Santa's Workshop!<p>
       </div>
       <div class="rightcolumn">
