--- a/1-1_team.html
+++ b/1-1_team.html
@@ -84,7 +84,7 @@ and memorable way.</h4>
 </div>
 
 <div class="w3-container">
-<h2>Meet the leaders behind our WOW-worthy floral and events!</h2>
+<h2>Meet the leaders behind our WOW-worthy floral and events.</h2>
 
 </div>
 
@@ -97,7 +97,7 @@ and memorable way.</h4>
   <div class="column">
     <h3>Bridget Connell</h3>
     <h4>Co-Owner &amp; Principal Event Designer/Planner</h4>
-    <p class="padding small">Bridget's love of design started at a very young age - she started working as a  designer and fell in love with creating beautiful things from a variety of materials. This love of creation took a leap into yet another medium - fresh florals and event design. Now an award-winning florist and wedding/event planner, she is constantly pushing the envelope to try to create new and exciting designs that are unique, chic and elegant. But her favorite job of all is being wife to husband Pat and mom to kids Sam, Lauren and John.</p>
+    <p class="padding small">Bridget's love of design started at a very young age - she started working as a  designer and fell in love with creating beautiful things from a variety of materials. This love of creation took a leap into yet another medium - fresh florals and event design. Now an award-winning florist and wedding/event planner, she is constantly pushing the envelope to try to create new and exciting designs that are unique, chic and elegant. But her favorite job of all is being wife to husband Pat and mom to kids Sam, Lauren, and John.</p>
     <h3>Marsha Hunt</h3>
     <h4>Co-Owner &amp; Principal Floral/Event Designer</h4>
     <p class="padding small">Marsha Hunt burst onto the floral design scene in 2003, winning two awards in her first design competition and has since won four ISES "Best of Minnesota" Star Awards for her floral and event design work. Prior to her floral career, Marsha honed her creative abilities as a consultant in new product/ packaging design and as a research chemist at General Mills & Dow Chemical, earning multiple design patents and awards. Besides loving flowers, the joy of her life is her family - husband Dan, daughter Marit, and son Devan.</p>
