--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@ img {border: 1px solid #edeae6;}
 
   <div class="w3-container">
     <h2>HOLIDAY MARKET &amp; IDEAS HOUSE</h2>
-      <h3 style="text-align:left;">Local gifts made with love to celebrate those you love.</h3>
-          <div class="leftcolumn"> <p>In-studio and online throughout December.</p>
+      <div class="leftcolumn"> <h3 style="text-align:left;">'Tis the season to shop, give, and be inspired.</h3>
+          <p>Get to know our local vendors and learn more about the event. </p>
       </div>
       <div class="rightcolumn">
         <a href="https://kehanson14.github.io/Haute_Holidays/2_market.html" class="button">EXPLORE</a>
