completed about page

--- a/1-1_team.html
+++ b/1-1_team.html
@@ -44,6 +44,7 @@
   h2 {font-family: 'Montserrat', sans-serif; font-weight: bold; text-align: center;}
   h3 {font-family: 'Montserrat', sans-serif; text-align: center;}
   h4 {font-family: 'Montserrat', sans-serif; text-align: center;}
+  h5 {font-family: 'Montserrat', sans-serif; text-align: center;}
   p {font-family: 'Lora', serif;}
 
   img {border: 1px solid #edeae6;}
@@ -76,6 +77,7 @@
   </div>
 <br>
 
+
 <div class="w3-container">
 <h4 style="text-align:left; padding: 5px 20px;">Haute House Studio is a boutique floral & event studio located in Minneapolis/St. Paul, Minnesota.
 We are known for our energy, enthusiasm, creativity, and attention to detail. We connect with our
@@ -83,28 +85,72 @@ clients on a personal level, understand your vision, and then bring that vision 
 and memorable way.</h4>
 </div>
 
+
 <div class="w3-container">
 <h2>Meet the leaders behind our WOW-worthy floral and events.</h2>
 
 </div>
 
 <div class="row">
-  <div class="column">
+  <div class="aboutcolumn">
     <br>
     <br>
     <img src="photos_pages/mb.jpg" alt="Marsha and Bridget" style="width:100%">
   </div>
-  <div class="column">
+  <div class="aboutcolumn">
     <h3>Bridget Connell</h3>
     <h4>Co-Owner &amp; Principal Event Designer/Planner</h4>
-    <p class="padding small">Bridget's love of design started at a very young age - she started working as a  designer and fell in love with creating beautiful things from a variety of materials. This love of creation took a leap into yet another medium - fresh florals and event design. Now an award-winning florist and wedding/event planner, she is constantly pushing the envelope to try to create new and exciting designs that are unique, chic and elegant. But her favorite job of all is being wife to husband Pat and mom to kids Sam, Lauren, and John.</p>
+    <p class="padding small">Bridget's love of design started at a very young age - she started working as a designer
+      and fell in love with creating beautiful things from a variety of materials. This love of creation took a leap
+      into yet another medium - fresh florals and event design. Now an award-winning florist and wedding/event planner,
+      she is constantly pushing the envelope to try to create new and exciting designs that are unique, chic and elegant.
+      But her favorite job of all is being wife to husband Pat and mom to kids Sam, Lauren, and John.</p>
     <h3>Marsha Hunt</h3>
     <h4>Co-Owner &amp; Principal Floral/Event Designer</h4>
-    <p class="padding small">Marsha Hunt burst onto the floral design scene in 2003, winning two awards in her first design competition and has since won four ISES "Best of Minnesota" Star Awards for her floral and event design work. Prior to her floral career, Marsha honed her creative abilities as a consultant in new product/ packaging design and as a research chemist at General Mills & Dow Chemical, earning multiple design patents and awards. Besides loving flowers, the joy of her life is her family - husband Dan, daughter Marit, and son Devan.</p>
+    <p class="padding small">Marsha Hunt burst onto the floral design scene in 2003, winning two awards in her
+      first design competition and has since won four ISES "Best of Minnesota" Star Awards for her floral and
+      event design work. Prior to her floral career, Marsha honed her creative abilities as a consultant in
+      new product/packaging design and as a research chemist at General Mills & Dow Chemical, earning multiple
+      design patents and awards. Besides loving flowers, the joy of her life is her family - husband Dan,
+      daughter Marit, and son Devan.</p>
   </div>
 </div>
 
+<br>
 
+<h2>OUR BRAND PROMISE</h2>
+<div class="w3-container"><h5>To inspire and celebrate beauty and creativity in all people by creating wow-worthy florals, event designs,
+  connections, and community.</h5></div>
+
+<br>
+
+<h2>OUR INTENTIONS</h2>
+<div class="w3-container">
+<div class="row">
+<div class="column">
+<h3>Inspire.</h3>
+<p>We encourage and motivate everyone to be the most creative and experessive versions of themselves.
+  We inspire everyone to believe they can be creative and that we'll be their partner in doing so. We motivate
+  people to try new things, expand their views, and feel inspired to create a life of beauty and creativity.</p>
+<h3>Celebrate.</h3>
+<p>We enthusiastically celebrate the special moments in everyone's lives - from wedding days to birthdays, baby showers,
+  proms, and other celebration-worthy times like National Dog Day or National Dessert Day. We celebrate successes and
+  learning opportunities; we celebrate our clients and our team. We share in your celebrations and create beauty
+  in these moments.</p>
+</div>
+
+<div class="column">
+  <h3>Connect.</h3>
+    <p>We create opportunities for people to connect with us and with each other. Creativity is meant to be shared and
+  celebrated. We aim to make you feel something through our offerings - whether it's through something we create,
+  or something you create.</p>
+<h3>Educate.</h3>
+<p>We provide tools for you to live creatively by sharing tips and tricks we've learned over the years,
+  hosting workshops, and informing you about how we can help create more beauty in your worlds
+  through our services.</p>
+</div>
+</div>
+</div>
   <br>
 
   <footer>
