update market page
footer, fonts, hero text fixed

--- a/2_market.html
+++ b/2_market.html
@@ -70,7 +70,7 @@
 
     <div class="hero-image">
       <div class="hero-text">
-        <h1 style="font-size:50px"><strong>HOLIDAY MARKET &amp; IDEAS HOUSE</strong></h1>
+        <h1 style="font-size:40px"><strong>HOLIDAY MARKET <br>&amp; IDEAS HOUSE</strong></h1>
       </div>
     </div>
   <br>
@@ -92,7 +92,7 @@
 
     <div class="row">
       <div class="column">
-        <br><img src="blackcandle.jpg" alt="black candle" style="width:100%">
+        <br><img src="photos_index/mkt/blackcandle.jpg" alt="black candle" style="width:100%">
       </div>
       <div class="column">
         <img src="joy.jpg" alt="joy decoration" style="width:100%">
@@ -100,46 +100,48 @@
     </div>
 
 <div class="row">
-  <div class="column" style="font-family: Georgia, serif;">
+  <div class="column">
       <h2>Wednesday, December 4, 2019
       <br>11AM-1PM
       <br>5:30PM-7:30PM</h2>
 <br>
 
 <div class="row">
-  <div class="vendorcolumn" style="font-family: Georgia, serif;">
+  <div class="vendorcolumn">
 <img src="logo.png">
       <h3>Haute House Studio</h3>
       <p>Fresh florals, house-poured candles, and custom gift-wrapping.</p>
   </div>
-  <div class="vendorcolumn" class="border" style="font-family: Georgia, serif;">
+  <div class="vendorcolumn">
       <h3>Mary Jane Studio</h3>
       <p></p>
   </div>
-  <div class="vendorcolumn" style="font-family: Georgia, serif;">
+  <div class="vendorcolumn">
       <h3>Edina Spiritwear</h3>
       <p>Fresh florals, house-poured candles, and custom gift-wrapping.</p>
   </div>
-  <div class="vendorcolumn" style="font-family: Georgia, serif;">
+  <div class="vendorcolumn">
       <h3>Noon Day</h3>
       <p></p>
   </div>
 </div>
+</div></div>
+
 
 <div class="row">
-  <div class="vendorcolumn" style="font-family: Georgia, serif;">
+  <div class="vendorcolumn">
       <h3>Num Nuts</h3>
       <p></p>
   </div>
-  <div class="vendorcolumn" class="border" style="font-family: Georgia, serif;">
+  <div class="vendorcolumn">
       <h3>Freak Flag Foods</h3>
       <p></p>
   </div>
-  <div class="vendorcolumn" style="font-family: Georgia, serif;">
+  <div class="vendorcolumn">
       <h3></h3>
       <p></p>
   </div>
-  <div class="vendorcolumn" style="font-family: Georgia, serif;">
+  <div class="vendorcolumn">
       <h3></h3>
       <p></p>
   </div>
@@ -148,7 +150,8 @@
 <br>
 
 </div>
-<div class="column" style="font-family: Georgia, serif;">
+
+<div class="column">
     <h2>Wednesday, December 11, 2019
     <br>11AM-1PM
     <br>5:30PM-7:30PM</h2>
@@ -158,38 +161,38 @@
 <br>
 
 <div class="row">
-  <div class="vendorcolumn" style="font-family: Georgia, serif;">
+  <div class="vendorcolumn">
       <h3>Haute House Studio</h3>
       <p></p>
   </div>
-  <div class="vendorcolumn" class="border" style="font-family: Georgia, serif;">
+  <div class="vendorcolumn">
       <h3>Alice</h3>
       <p></p>
   </div>
-  <div class="vendorcolumn" style="font-family: Georgia, serif;">
+  <div class="vendorcolumn">
       <h3>KT Design</h3>
       <p></p>
   </div>
-  <div class="vendorcolumn" style="font-family: Georgia, serif;">
+  <div class="vendorcolumn">
       <h3>Jessica Matrasko Jewelry</h3>
       <p></p>
   </div>
 </div>
 
 <div class="row">
-  <div class="vendorcolumn" style="font-family: Georgia, serif;">
+  <div class="vendorcolumn">
       <h3>Num Nuts</h3>
       <p></p>
   </div>
-  <div class="vendorcolumn" class="border" style="font-family: Georgia, serif;">
+  <div class="vendorcolumn">
       <h3>Freak Flag Foods</h3>
       <p></p>
   </div>
-  <div class="vendorcolumn" style="font-family: Georgia, serif;">
+  <div class="vendorcolumn">
       <h3></h3>
       <p></p>
   </div>
-  <div class="vendorcolumn" style="font-family: Georgia, serif;">
+  <div class="vendorcolumn">
       <h3></h3>
       <p></p>
   </div>
@@ -198,7 +201,7 @@
 <div class="w3-container">
 <p class="padding">Sponsors
                 <br>Stickney Hill Dairy</p>
-  <div>
+  </div>
 
 <br>
 
@@ -206,14 +209,14 @@
     <h3>HAUTE HOUSE STUDIO</h3>
     <div class="row">
       <div class="column">
-          <a href="mailto:hello@hautehousestudio.com" style="color:white;"> hello@hautehousestudio.com</a>
+        <p><a href="mailto:hello@hautehousestudio.com" style="color:white;">hello@hautehousestudio.com</a>
           <br>(612) 730-1143
-          <br> Hours by appointment
+          <br> Hours by appointment</p>
       </div>
       <div class="column">
-          5500 Lincoln Drive
+        <p>5500 Lincoln Drive
           <br>Suite 150
-          <br>Edina, MN 55436
+          <br>Edina, MN 55436</p>
       </div>
   </div></footer>
 
