--- a/5_order.html
+++ b/5_order.html
@@ -124,15 +124,17 @@
     <h3>
   HAUTE HOUSE STUDIO</h3>
     <div class="row">
-      <div>
-          <a href="mailto:hello@hautehousestudio.com" style="color:white;"> hello@hautehousestudio.com</a>
+
+        <div class="column">
+          <p><a href="mailto:hello@hautehousestudio.com" style="color:white;"> hello@hautehousestudio.com</a>
           <br>(612) 730-1143
-          <br> Hours by appointment
+          <br> Hours by appointment</p>
       </div>
       <div>
-          5500 Lincoln Drive
+        <div class="column">
+          <p>5500 Lincoln Drive
           <br>Suite 150
-          <br>Edina, MN 55436
+          <br>Edina, MN 55436</p>
       </div>
   </div></footer>
 
