market update part 1
columns fonts

--- a/2_market.html
+++ b/2_market.html
@@ -42,7 +42,7 @@
     h1 {font-family: 'Montserrat', sans-serif; text-align: center;}
     h2 {font-family: 'Montserrat', sans-serif; font-weight: bold; text-align: center;}
     h3 {font-family: 'Montserrat', sans-serif; text-align: center;}
-    h4 {font-family: 'Montserrat', sans-serif;}
+    h4 {font-family: 'Montserrat', sans-serif; font-weight: bold; text-align: center;}
     p {font-family: 'Lora', serif;}
 
     img {border: 1px solid #edeae6;}
@@ -83,8 +83,11 @@
   and shop local products created by some of the best and most talented Minnesota makers.
   Jewelry, candles, decor, and more--we have it all.</p>
 
-<p class="padding"> Our studio will also be bedazzled with current, on-trend holiday designs.
-  Find your style for your home or let us do it for you.</p>
+<p class="padding">Our studio space will be bedazzled with current, on-trend holiday designs you
+  can bring back to your own home.</p>
+
+  <p class="padding">Designer gift-wrapping also on location! You can avoid the stress and let our
+    pros handle the mess.</p>
 
   <p class="padding"> Leave feeling festive, inspired, and full of joy after experiencing this
     new local event.</p>
@@ -92,110 +95,73 @@
 
     <div class="row">
       <div class="column">
-        <br><img src="photos_index/mkt/blackcandle.jpg" alt="black candle" style="width:100%">
+        <img src="photos_index/mkt/blackcandle.jpg" alt="black candle" style="width:100%">
+        <h2>Wednesday, December 4, 2019
+        <br>11AM-1PM
+        <br>5:30PM-7:30PM</h2>
+        <h4>at Haute House Studio</h4>
+
+      <br>
+
+      <div class="row">
+      <div class="column">
+        <h3>Haute House Studio</h3>
+        <p>Fresh florals, house-poured candles, and custom gift-wrapping.</p>
+
+        <h3>Studio Mary Jane</h3>
+        <p></p>
+
+        <h3>Num Nuts</h3>
+        <p></p>
       </div>
       <div class="column">
-        <img src="joy.jpg" alt="joy decoration" style="width:100%">
+        <h3>Namakan Fur</h3>
+        <p></p>
+
+        <h3>Edina Spiritwear</h3>
+        <p></p>
+
+        <h3>Freak Flag Foods</h3>
+        <p></p>
       </div>
-    </div>
-
-<div class="row">
-  <div class="column">
-      <h2>Wednesday, December 4, 2019
-      <br>11AM-1PM
-      <br>5:30PM-7:30PM</h2>
-<br>
-
-<div class="row">
-  <div class="vendorcolumn">
-<img src="logo.png">
-      <h3>Haute House Studio</h3>
-      <p>Fresh florals, house-poured candles, and custom gift-wrapping.</p>
-  </div>
-  <div class="vendorcolumn">
-      <h3>Mary Jane Studio</h3>
-      <p></p>
-  </div>
-  <div class="vendorcolumn">
-      <h3>Edina Spiritwear</h3>
-      <p>Fresh florals, house-poured candles, and custom gift-wrapping.</p>
-  </div>
-  <div class="vendorcolumn">
-      <h3>Noon Day</h3>
-      <p></p>
-  </div>
-</div>
-</div></div>
+      </div>
 
 
-<div class="row">
-  <div class="vendorcolumn">
-      <h3>Num Nuts</h3>
-      <p></p>
-  </div>
-  <div class="vendorcolumn">
-      <h3>Freak Flag Foods</h3>
-      <p></p>
-  </div>
-  <div class="vendorcolumn">
-      <h3></h3>
-      <p></p>
-  </div>
-  <div class="vendorcolumn">
-      <h3></h3>
-      <p></p>
-  </div>
-</div>
 
-<br>
+      </div>
+      <div class="column">
+        <img src="photos_pages/blackredgifts.jpg" alt="black and red gift wrapping" style="width:100%">
 
-</div>
-
-<div class="column">
     <h2>Wednesday, December 11, 2019
     <br>11AM-1PM
     <br>5:30PM-7:30PM</h2>
-</div>
-</div>
 
 <br>
 
 <div class="row">
-  <div class="vendorcolumn">
+  <div class="column">
       <h3>Haute House Studio</h3>
       <p></p>
-  </div>
-  <div class="vendorcolumn">
-      <h3>Alice</h3>
-      <p></p>
-  </div>
-  <div class="vendorcolumn">
-      <h3>KT Design</h3>
-      <p></p>
-  </div>
-  <div class="vendorcolumn">
+
       <h3>Jessica Matrasko Jewelry</h3>
       <p></p>
-  </div>
-</div>
 
-<div class="row">
-  <div class="vendorcolumn">
-      <h3>Num Nuts</h3>
-      <p></p>
-  </div>
-  <div class="vendorcolumn">
       <h3>Freak Flag Foods</h3>
       <p></p>
   </div>
-  <div class="vendorcolumn">
-      <h3></h3>
+
+  <div class="column">
+      <h3>Alice</h3>
+      <p></p>
+
+      <h3>KT Design</h3>
       <p></p>
   </div>
-  <div class="vendorcolumn">
-      <h3></h3>
-      <p></p>
-  </div>
+
+</div>
+</div></div></div>
+
+</div>
 </div>
 
 <div class="w3-container">
