--- a/2_market.html
+++ b/2_market.html
@@ -135,6 +135,7 @@
     <h2>Wednesday, December 11, 2019
     <br>11AM-1PM
     <br>5:30PM-7:30PM</h2>
+    <h4>at Haute House Studio</h4>
 
 <br>
 
@@ -165,11 +166,15 @@
 </div>
 
 <div class="w3-container">
-<p class="padding">Sponsors
-                <br>Stickney Hill Dairy</p>
-  </div>
+<h3>Sponsors</h3>
+<h4>Stickney Hill Dairy</h4>
+</div>
 
 <br>
+
+<h2>Who are our vendors?</h2>
+
+
 
   <footer>
     <h3>HAUTE HOUSE STUDIO</h3>
