--- a/2_market.html
+++ b/2_market.html
@@ -43,7 +43,7 @@
     h2 {font-family: 'Montserrat', sans-serif; font-weight: bold; text-align: center;}
     h3 {font-family: 'Montserrat', sans-serif; text-align: center;}
     h4 {font-family: 'Montserrat', sans-serif; font-weight: bold; text-align: center;}
-    p {font-family: 'Lora', serif;}
+    p {font-family: 'Lora', serif; text-align: center;}
 
     img {border: 1px solid #edeae6;}
 
@@ -96,11 +96,13 @@
     <div class="row">
       <div class="column">
         <img src="photos_index/mkt/blackcandle.jpg" alt="black candle" style="width:100%">
+          <br>
         <h2>Wednesday, December 4, 2019
         <br>11AM-1PM
         <br>5:30PM-7:30PM</h2>
         <h4>at Haute House Studio</h4>
 
+      <br>
       <br>
 
       <div class="row">
@@ -109,22 +111,26 @@
         <p>Fresh florals, house-poured candles, and custom gift-wrapping.</p>
 
         <h3>Studio Mary Jane</h3>
-        <p></p>
+        <p>Clutches, bucket bags, and totes. Designed with patterns to please anyone.</p>
 
         <h3>Num Nuts</h3>
-        <p></p>
+        <p>Small-batch, delicious, paleo-friendly, vegan nuts and snacks.</p>
       </div>
-      <div class="column">
+      <div class="column" style="padding-right: 20px;">
+        <h3>Freak Flag Foods</h3>
+        <p>Organic sauces to add to anything you eat.</p>
+
         <h3>Namakan Fur</h3>
-        <p></p>
+        <p>Hats and puffs, ruffs, accessories, and more to bridge the gap between winter style and warmth.</p>
 
         <h3>Edina Spiritwear</h3>
-        <p></p>
+        <p>Tees, hats, sweatshirts and more to support your local team.</p>
 
-        <h3>Freak Flag Foods</h3>
-        <p></p>
+    <br>
+
+
       </div>
-      </div>
+    </div>
 
 
 
@@ -138,25 +144,26 @@
     <h4>at Haute House Studio</h4>
 
 <br>
+<br>
 
 <div class="row">
-  <div class="column">
+  <div class="column" style="padding-left: 20px;">
       <h3>Haute House Studio</h3>
-      <p></p>
+      <p>Fresh florals, house-poured candles, and custom gift-wrapping.</p>
 
-      <h3>Jessica Matrasko Jewelry</h3>
-      <p></p>
+      <h3 style="font-size: 22px;">Jessica Matrasko Jewelry</h3>
+      <p>Delicate and beautiful jewelry designed in Hollywood and brought to MN.</p>
 
       <h3>Freak Flag Foods</h3>
-      <p></p>
+      <p>Organic sauces to add to anything you eat.</p>
   </div>
 
   <div class="column">
       <h3>Alice</h3>
-      <p></p>
+      <p>Cross-body, bucket, and mini-chain bags designed with style in mind.</p>
 
       <h3>KT Design</h3>
-      <p></p>
+      <p>Zip-its, totes, infinity scarves, cowls, and wristlets for everyone on your list.</p>
   </div>
 
 </div>
@@ -166,8 +173,13 @@
 </div>
 
 <div class="w3-container">
-<h3>Sponsors</h3>
+<h2>SPONSOR</h2>
 <h4>Stickney Hill Dairy</h4>
+<p>Stickney Hill Dairy is committed to providing our customers with the highest quality farmstead Goat Cheese
+  products available. Each day, we process milk into the finest cheeses in the nation, through a combination
+  of time-honored tradition and the latest in dairy technology. We use immense care and dedication to ensure a
+  consistent, flavorful cheese with every batch.
+  - <a href="https://stickneydairy.com/our-company/#sthash.x1ZQTa0v.dpuf">See more here.</a></p>
 </div>
 
 <br>
