styles, sponsor, vendor info updated

--- a/2_market.html
+++ b/2_market.html
@@ -79,22 +79,22 @@
 <h1>'Tis the season ...
   <br>to shop, give, and be inspired.</h1>
 <div class="w3-container">
-<p class="padding">Join us at our FIRST annual Haute Holiday Market! Sip on a relaxing beverage
+<p class="padding left">Join us at our FIRST annual Haute Holiday Market! Sip on a relaxing beverage
   and shop local products created by some of the best and most talented Minnesota makers.
-  Jewelry, candles, decor, and more--we have it all.</p>
+  Jewelry, candles, decor, and more - we have it all.</p>
 
-<p class="padding">Our studio space will be bedazzled with current, on-trend holiday designs you
+<p class="padding left">Our studio space will be bedazzled with current, on-trend holiday designs you
   can bring back to your own home.</p>
 
-  <p class="padding">Designer gift-wrapping also on location! You can avoid the stress and let our
+  <p class="padding left">Designer gift-wrapping also on location! You can avoid the stress and let our
     pros handle the mess.</p>
 
-  <p class="padding"> Leave feeling festive, inspired, and full of joy after experiencing this
+  <p class="padding left"> Leave feeling festive, inspired, and full of joy after experiencing this
     new local event.</p>
   <div>
 
     <div class="row">
-      <div class="column">
+      <div class="column" style="padding-right: 20px;">
         <img src="photos_index/mkt/blackcandle.jpg" alt="black candle" style="width:100%">
           <br>
         <h2>Wednesday, December 4, 2019
@@ -116,7 +116,7 @@
         <h3>Num Nuts</h3>
         <p>Small-batch, delicious, paleo-friendly, vegan nuts and snacks.</p>
       </div>
-      <div class="column" style="padding-right: 20px;">
+      <div class="column">
         <h3>Freak Flag Foods</h3>
         <p>Organic sauces to add to anything you eat.</p>
 
@@ -132,10 +132,10 @@
       </div>
     </div>
 
-
+<br>
 
       </div>
-      <div class="column">
+      <div class="column" style="padding-left: 20px;">
         <img src="photos_pages/blackredgifts.jpg" alt="black and red gift wrapping" style="width:100%">
 
     <h2>Wednesday, December 11, 2019
@@ -147,7 +147,7 @@
 <br>
 
 <div class="row">
-  <div class="column" style="padding-left: 20px;">
+  <div class="column">
       <h3>Haute House Studio</h3>
       <p>Fresh florals, house-poured candles, and custom gift-wrapping.</p>
 
@@ -172,20 +172,63 @@
 </div>
 </div>
 
+<br>
+
 <div class="w3-container">
-<h2>SPONSOR</h2>
-<h4>Stickney Hill Dairy</h4>
-<p>Stickney Hill Dairy is committed to providing our customers with the highest quality farmstead Goat Cheese
-  products available. Each day, we process milk into the finest cheeses in the nation, through a combination
-  of time-honored tradition and the latest in dairy technology. We use immense care and dedication to ensure a
-  consistent, flavorful cheese with every batch.
-  - <a href="https://stickneydairy.com/our-company/#sthash.x1ZQTa0v.dpuf">See more here.</a></p>
+  <h2>SPONSORS</h2>
+        <div class="leftcolumnsponsor">
+          <img src="photos_pages/mkt/stickneyhill.png" style="border: none;"></div>
+
+        <div class="rightcolumnsponsor"><p>Stickney Hill Dairy is committed to providing their customers with the highest quality farmstead Goat Cheese
+        products available. Each day, they process milk into the finest cheeses in the nation, through a combination
+        of time-honored tradition and the latest in dairy technology. Stickney Hill Dairy uses immense care and dedication to ensure a
+        consistent, flavorful cheese with every batch.
+        <a href="https://stickneydairy.com/our-company/#sthash.x1ZQTa0v.dpuf"> See more here.</a></p>
+      </div>
+</div>
+
+
+
 </div>
 
 <br>
 
 <h2>Who are our vendors?</h2>
+  <h3>Haute House Studio</h3>
+    <div class="leftcolumnvendor"></div>
+    <div class="rightcolumnvendor"></div>
 
+  <h3>Alice</h3>
+    <div class="leftcolumn"></div>
+    <div class="rightcolumn"></div>
+
+  <h3>Edina Spiritwear</h3>
+    <div class="leftcolumnvendor"></div>
+    <div class="rightcolumnvendor"></div>
+
+  <h3>Freak Flag Foods</h3>
+    <div class="leftcolumn"></div>
+    <div class="rightcolumn"></div>
+
+  <h3>Jessica Matrasko Jewelry</h3>
+    <div class="leftcolumnvendor"></div>
+    <div class="rightcolumnvendor"></div>
+
+  <h3>KT Design</h3>
+    <div class="leftcolumn"></div>
+    <div class="rightcolumn"></div>
+
+  <h3>Namakan Fur</h3>
+    <div class="leftcolumnvendor"></div>
+    <div class="rightcolumnvendor"></div>
+
+  <h3>Num Nuts</h3>
+    <div class="leftcolumn"></div>
+    <div class="rightcolumn"></div>
+
+  <h3>Studio Mary Jane</h3>
+    <div class="leftcolumnvendor"></div>
+    <div class="rightcolumnvendor"></div>
 
 
   <footer>
