update vendor bios

--- a/2_market.html
+++ b/2_market.html
@@ -159,7 +159,7 @@
   </div>
 
   <div class="column">
-      <h3>Alice</h3>
+      <h3>ALICE</h3>
       <p>Cross-body, bucket, and mini-chain bags designed with style in mind.</p>
 
       <h3>KT Design</h3>
@@ -198,39 +198,62 @@
     <div class="leftcolumnvendor"></div>
     <div class="rightcolumnvendor"></div>
 
-  <h3>Alice</h3>
-    <div class="leftcolumn"></div>
-    <div class="rightcolumn"></div>
+  <h3>ALICE</h3>
+    <div class="leftcolumn"><p>ALICE bags are created for you to channel your inner confidence and strength
+      while being beautiful. ALICE bags are designed to act as the finishing touch to any outfit.</div>
+    <div class="rightcolumn"></p></div>
 
   <h3>Edina Spiritwear</h3>
     <div class="leftcolumnvendor"></div>
     <div class="rightcolumnvendor"></div>
 
   <h3>Freak Flag Foods</h3>
-    <div class="leftcolumn"></div>
-    <div class="rightcolumn"></div>
+    <div class="leftcolumn"><p>Freak Flag Foods is an invitation to inspire imagination and creativity.
+      It's a rallying cry for anyone and everyone to express themselves by getting carried away in the kitchen.
+      In collaboration with veteran local chef Mary Jane Miller, who has crafted these delightfully unique and
+      full-flavored organic master sauces — the possibilities of what you can whip up are as easy as they are endless.
+      So, go on, and be yourself in the kitchen and in life. We can't wait to see what you cook up.</div>
+    <div class="rightcolumn"></p></div>
 
   <h3>Jessica Matrasko Jewelry</h3>
     <div class="leftcolumnvendor"></div>
-    <div class="rightcolumnvendor"></div>
+    <div class="rightcolumnvendor"><p>Jessica Matrasko Jewelry was established in 2007 with the
+      modern woman in mind. We think jewelry should be on trend, but never trendy, so we use organic
+      materials and high quality, hypoallergenic 14K gold filled metal. We want you to wear these styles
+      for years to come, and we encourage you to layer pieces, to mix and match and to create your own
+      favorite look, that evolves just as your personal style does.</p></div>
 
   <h3>KT Design</h3>
-    <div class="leftcolumn"></div>
-    <div class="rightcolumn"></div>
+    <div class="leftcolumn"><p>KT Design has the perfect range of gifts for everyone on your list from
+      family to friends to teachers - even yourself! KT Design creates a variety of oilcloth zip-its, totes to plaid infinity scarves,
+        cowls, and wristlets for everyone on your list. Pair your cowl with a graphic tee for a complete look.
+        Brand new waxed canvas and leather handbags are making their debut this fall.
+    <div class="rightcolumn"></p></div>
 
   <h3>Namakan Fur</h3>
     <div class="leftcolumnvendor"></div>
-    <div class="rightcolumnvendor"></div>
+    <div class="rightcolumnvendor"><p>As born and bred Minnesotans, we know that with the right gear,
+      there’s no such thing as too cold. However, we’re often faced with the choice of looking great and
+      freezing, or staying warm in frumpy gear. Namakan bridges the gap between winter style and comfort,
+      from the head down with our faux fur ruffs that attach to any hood or collar, beanies, earmuffs,
+      mittens and more.</p></div>
 
   <h3>Num Nuts</h3>
-    <div class="leftcolumn"></div>
+    <div class="leftcolumn"><p>Chika Griswold started Num Nuts in her Minnesota kitchen. Her passion for cooking
+      and love of simple, healthy foods led her to try roasting her own nuts at home. Over time, she developed a unique
+      recipe and roasting technique that delivered just the right amount of sweetness and saltiness and
+      allowed the delicious flavors of the nuts to shine through.
+      <br>Why the name "Num Nuts"? Because num, num, num, num, num!</p></div>
     <div class="rightcolumn"></div>
 
   <h3>Studio Mary Jane</h3>
     <div class="leftcolumnvendor"></div>
-    <div class="rightcolumnvendor"></div>
+    <div class="rightcolumnvendor"><p>Mary Jane started her business with custom orders where she could work with clients
+      to create unique and one-of-kind bags. Her passion for fabrics of all colors, textures, and patterns is her
+      true inspiration. Mary Jane loves observing current fashion trends and working them into bags that people can
+      really use. All Studio Mary Jane bags are handmade and fully customizable!</p></div>
 
-
+</div>
   <footer>
     <h3>HAUTE HOUSE STUDIO</h3>
     <div class="row">
